# py-http-server

./: LICENSE  README.md  config.example.json  config.json.schema  http_request.py  http_response.py  install.sh  main.py  pyproject.toml  router.py
http11/: request.py
networking/: connection.py  listener.py
py_http_server/: __init__.py  __main__.py  common.py  log.py  main.py
py_http_server/common/: __init__.py  constants.py  request_handler.py  structures.py  types.py  utils.py
py_http_server/data/: index.html
py_http_server/http/: constants.py  request.py  request_handler.py  response.py  response_body.py
py_http_server/middlewares/: __init__.py  base.py  basic_auth.py  compress.py  default.py  enforce_https.py  minimize.py  rewrite_redirects.py  virtual_host.py
py_http_server/middlewares/_internal/: file.py  proxy.py
py_http_server/networking/: __init__.py  address.py  connection.py  connection_info.py  connection_socket.py  listener.py
py_http_server/routers/: __init__.py  base.py  code.py  debug.py  file.py  forward_proxy.py  proxy.py  reverse_proxy.py
py_http_server/templates/: index.html
src/: logs.py  main.py  router.py
src/http11/: constants.py  request.py  request_handler.py  response.py
src/middlewares/: base.py  basic_auth.py  compress.py  default.py
src/networking/: address.py  connection.py  listener.py
src/routers/: base.py  code.py  debug.py  file.py
