[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_http_server"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = ["urllib3>=2.3.0"]
description = "Native Python HTTP(S) server for HTTP 1.0 and 1.1"
readme = "README.md"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
compress = ["zstd>=1.5.5", "Brotli>=1.1.0"]
minimize = ["minify-html>=0.15.0"]
all = ["py_http_server[compress,minimize]"]

[project.urls]
"Homepage" = "https://github.com/tanna-1/py-http-server"
"Source" = "https://github.com/tanna-1/py-http-server"

[project.scripts]
py_http_server = "py_http_server:main"

[tool.setuptools.package-data]
py_http_server = ["templates/*"]
